# spatial-cinema

./: README.md  build.bat  manifest.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
public/: manifest.json
scripts/: generate-icons.js
src/background/: serviceWorker.ts
src/dashboard/: App.tsx  index.html
src/dashboard/components/: DashboardSpeakerVisualizer.tsx
src/dsp/: Cargo.toml
src/dsp/src/: lib.rs
src/offscreen/: offscreen.html  offscreen.ts
src/popup/: App.tsx  index.css  index.html
src/popup/components/: AudioVisualizer.tsx  SpeakerVisualizer.tsx
src/utils/: hrtf-data.ts  offline-tester.ts  store.ts
src/worklet/: surround-processor.ts
