[package]
name = "surround_dsp"
version = "1.0.0"
edition = "2021"
description = "WebAssembly DSP Acceleration Engine for Virtual Surround Spatializer"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["console"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
